# PeregrineAntiCheat

./: README.md  bugs.xml  build_dll.bat  rules.yar  signatures.conf  todo.xml
src/PeregrineDLL/: PeregrineDLL.sln  vcpkg.json
src/PeregrineDLL/PeregrineDLL/: PeregrineDLL.vcxproj  PeregrineDLL.vcxproj.filters  callstack.c  dllmain.cpp  hwbp.c  hwbp.h  ipc.c  ipc.h
src/PeregrineKernelComponent/: PeregrineKernelComponent.sln
src/PeregrineKernelComponent/PeregrineKernelComponent/: ApcInjection.c  ApcInjection.h  AppState.c  AppState.h  Coms.c  Coms.h  Hwid.c  Hwid.h  NotifyRoutine.c  NotifyRoutine.h  PeregrineKernelComponent.vcxproj  PeregrineKernelComponent.vcxproj.filters  Protection.c  Protection.h  SystemCheck.c  SystemCheck.h  VadScan.c  VadScan.h  main.c  obCallback.c  obCallback.h
src/Userland/: DLL.py  ETWConsumer.py  HookDetection.py  IPC.py  ManualMapDetection.py  OverlayDetection.py  PatchDetection.py  PeregrineKernelComponent.sys  ProcessBlacklist.py  peregrine_gui.py  self_tamper.py  threadWork.py
src/peregrine-tauri/: package-lock.json  package.json
src/peregrine-tauri/src/: app.html
src/peregrine-tauri/src-tauri/: Cargo.toml  tauri.conf.json
src/ulrust/: package-lock.json
src/ulrust/src/: index.html  main.js  styles.css
src/ulrust/src-tauri/: Cargo.toml  tauri.conf.json
src/ulrust/src-tauri/src/: dll_injection.rs  ipc.rs  kernel_ioctl.rs  lib.rs  process_blacklist.rs
test/: CheatEngine.c  build.bat  cheat_etwti.c  cheat_hwbp.c  cheat_inject.c  cheat_manualmap.c  cheat_patch.c  cheat_shellcode.c  cheat_yara.c  game.c  payload.c
(+15 files in other folders)
